--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ homepage = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
 repository = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
 documentation = "https://docs.rs/imgui-rs-vulkan-renderer"
 license = "MIT"
-version = "0.8.1"
+version = "0.8.2"
 authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
 edition = "2018"
 
@@ -18,7 +18,7 @@ exclude = [
 
 [dependencies]
 log = "0.4"
-imgui = "^0.8"
+imgui = {git = "https://github.com/Ax9D/imgui-docking-rs" }
 ash = "0.35"
 ultraviolet = "0.8"
 vk-mem = { git = "https://github.com/Ax9D/vk-mem-fork", branch = "main", optional = true }
@@ -30,7 +30,7 @@ vkmem = ["vk-mem"]
 [dev-dependencies]
 simple_logger = "1.16.0"
 winit = "0.25.0"
-imgui-winit-support = { version = "^0.8", default-features = false, features = ["winit-25"] }
+imgui-winit-support = { git = "https://github.com/Ax9D/imgui-docking-rs", default-features = false, features = ["winit-25"] }
 ash = "0.35"
 ash-window = "0.9.0"
 image = "0.23"
